# llvm-clang

./: .clang_complete  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  NOTES-WANDERINGS.md  NOTES-this-dir.md  README.md  TODO  bare.cpp  bare2.cpp  boost-cpp-environment.sh  check-clang-include-paths.sh  cppnetlib-playground.sublime-project  doxygen.config  environment-boost-cpp.sh  environment-clang.sh  environment.sh  functions.sh  gcc_environment.sh  grepllvm.sh  install-boost-cpp.sh  install-cairo.sh  install-cairomm.sh  install-cppnetlib.sh  install-gnu-binutils.sh  install-libffi.sh  install-libunwind.sh  install-llvm-clang.sh  install_boost_cpp.sh  install_libunwind.sh  install_llvm_clang_libcxx_n_abi.sh  install_llvm_libcxx_standalone.sh  llvm-clang.sublime-project  note-build-linunwind.txt  playground.sublime-project  plop.sh  rebuild.sh  regen-cscope-ctags.sh  show-environment.sh  (+3 more)
cpp_playground/: .gitignore  CMakeLists.txt  CMakeLists.txt_  Process.h  ServiceDefinition.hpp  SomeClassA.cpp  SomeClassA.hpp  SomeClassB.cpp  SomeClassB.hpp  Syscall.h  Time.h  boost_options_debug_encoding.cpp  build.sh  container.cpp  container.hpp  cppnetlib_test1.cpp  echo.cpp  main.cpp  mixed.hpp  playground.sublime-project  rebuild.sh  run_cscope.sh  run_ctags.sh  symfony.cpp  test2.cpp  test_container.cpp  test_container.yml
cpp_playground/clang-check/: CMakeLists.txt  manual-build.sh
cpp_playground/experiments/: CMakeLists.txt
cpp_playground/experiments/X11/: CMakeLists.txt  xlib1.cpp
cpp_playground/experiments/clang-check/: CMakeLists.txt
cpp_playground/experiments/misc/: CMakeLists.txt  boost_options_debug_encoding.cpp  mixed.cpp  syscall1.cpp
cpp_playground/include/fabic/di/: base_definition.hpp  container.hpp  dependency.hpp  dll_service_provider.hpp  service_definition.hpp  service_provider.hpp  type_info.hpp  typedefs.hpp
cpp_playground/include/fabic/surface/: cairo.hpp  elements-inlines.hpp  elements.hpp  events.hpp  mask_values.hpp  maths_2d.hpp  surface.hpp  window-inlines.hpp  window.hpp  xcb.hpp
cpp_playground/include/fabic/syscall/: Process.h  Syscall.h  Time.h
cpp_playground/include/fabic/util/: bits.hpp  pointers.hpp
cpp_playground/include/fabic/xcb+/: cairo.hpp  elements-inlines.hpp  elements.hpp  events.hpp  mask_values.hpp  maths_2d.hpp  typedefs.hpp  window-inlines.hpp  window.hpp  xcb-inlines.hpp  xcb.hpp
cpp_playground/old/: Process.cpp  SomeClassA.cpp  boost_options_debug_encoding.cpp  main.cpp  mixed.hpp  mixed_main.cpp  test2.cpp  test_container.cpp
cpp_playground/src/: CMakeLists.txt
cpp_playground/src/di/: container.cpp  dll_service_provider.cpp
cpp_playground/src/dic-modules/: CMakeLists.txt
cpp_playground/src/dic-modules/asio/: IoService.cpp  module-boost-asio.cpp  (+1 more)
cpp_playground/src/hacks/: hack_cxa_throw_exception.cpp
cpp_playground/src/surface/: CMakeLists.txt  cairo.cpp  elements.cpp  events.cpp  surface.cpp  surface_main.cpp  window.cpp  xcb.cpp
cpp_playground/src/symf/: symf_main.cpp
cpp_playground/surface/: CMakeLists.txt
cpp_playground/surface/src/: elements.cpp  gtkmm.cpp  surface.cpp  surface_main.cpp  window.cpp  xcb+.cpp  xcb.cpp  xcb1.cpp
cpp_playground/symfony/: CMakeLists.txt
cpp_playground/symfony/module/: CMakeLists.txt
cpp_playground/symfony/src/: module-http-server.cpp  symfony.cpp
cpp_playground/web/: .htaccess
experiments/: CMakeLists.txt
experiments/clang/clang-check/: CMakeLists.txt
experiments/clang/fixtures/: bare.cpp
experiments/http/: cppnetlib_test1.cpp
experiments/kmodules/: Makefile
experiments/misc/: CMakeLists.txt  mixed.cpp  mixed.hpp
llvm-clang/: CMakeLists.txt  fabic-patch-clang-set-default-libcxx-stdlib.diff  fabic-patch-llvm-CMakeLists.txt-ccache-600.diff  fabic-patch-llvm-CMakeLists.txt-ccache.diff
llvm-clang/patches/: fabic-clang-linux-libcxx-default.patch  libcxxabi-link-libunwind.patch  llvm-use-ccache.patch  musl-libc-head-first-hacks-build-llvm-clang-sept-2014.patch
playground/: .gitignore  CMakeLists.txt  LICENSE  build.sh  clion_build_dir  doxygen.config  playground.sublime-project  rebuild.sh
playground/cmake/modules/: dude_please_dump_cmake_variables.cmake
playground/experiments/: CMakeLists.txt  vhost-fabic-llvm-fcgi.httpd.conf
playground/experiments/X11/: CMakeLists.txt  xlib1.cpp
playground/experiments/clang/: CMakeLists.txt  README.md
playground/experiments/clang-check/: CMakeLists.txt  ClangCheck.cpp
playground/experiments/http/: boostcgi_echo.cpp  cppnetlib_test1.cpp
playground/experiments/kmodules/: Makefile
playground/experiments/misc/: boost_options_debug_encoding.cpp  main1.cpp  mixed.hpp  syscall1.cpp
playground/experiments/soci-db-layer/: CMakeLists.txt  soci-mysql-example-01.cpp
playground/include/fabic/: config.hpp  logging.hpp  object.hpp
playground/lib/: CMakeLists.txt  fltk
playground/src/: CMakeLists.txt  logging.hpp
playground/src/clang/: CMakeLists.txt
playground/src/clong/: CMakeLists.txt  ClangAstConsumer.cpp  ClangAstConsumer.hpp
playground/src/di/: base_definition.hpp  container.cpp  container.hpp  dependency.hpp  dll_service_provider.cpp  dll_service_provider.hpp  service_definition.hpp  service_provider.hpp  type_info.hpp  typedefs.hpp
playground/src/dude/: CMakeLists.txt
playground/src/surface/: CMakeLists.txt  cairo.cpp  color.hpp  elements.cpp  events.cpp  main.cpp  surface.cpp  window.cpp  xcb+.hpp  xcb.cpp
playground/src/symf/: symf_main.cpp
playground/src/syscall/: CMakeLists.txt  NOTES-syscall.md  Process.h  Syscall.h  Time.h  _start.cpp  assert.cpp  assert.h  types.h
playground/src/util/: pointers.hpp
playground/tutu/: list-clang-types.cpp  llvm_headers.cpp  loads_of_headers_included.cpp  most_boost_headers.hpp  most_clang_headers.hpp  most_cpp_headers_included.cpp  most_cpp_headers_included.hxx  test-002.cpp  test-006.cpp  test-007.cpp
src/clang/print-fns/: CMakeLists.txt
src/dude/frog/: CMakeLists.txt
src/dude/surface/: CMakeLists.txt  maths_2d.hpp
src/dude/xcbx/: CMakeLists.txt  events.cpp  events.hpp  exceptions.hpp  inline-decls.hpp  mask_values.hpp  xcb.cpp
(+403 files in other folders)
